terraform_files/private-subnet.tf
# resource "aws_subnet" "ecs_private_subnet_1" {
#   vpc_id            = aws_vpc.ecs_vpc.id
#   cidr_block        = "10.0.2.0/24"
#   availability_zone = "us-east-1a"

#   tags = {
#     Name = "private subnet 1"
#   }
# }


# resource "aws_subnet" "ecs_private_subnet_2" {
#   vpc_id            = aws_vpc.ecs_vpc.id
#   cidr_block        = "10.0.3.0/24"
#   availability_zone = "us-east-1a"

#   tags = {
#     Name = "private subnet 2"
#   }
# }
